--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -3,6 +3,7 @@
         <meta charset='UTF-8' />
         <meta name='viewport' content='width=device-width, initial-scale=1.0' />
         <title>Josh - Social microblogging platform</title>
+        <link rel='canonical' href='https://josh.caffeine.xyz/' />
     </head>
     <body>
         <div id='root'></div>
